--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "4.5.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-player": "^2.6.2",
     "react-popper": "1.3.6",
     "react-scripts": "4.0.0",
     "reactstrap": "8.5.1",
